--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@import '@coreui';
+/* @import '@coreui'; */
 @plugin 'tailwindcss-animate';
 
 @custom-variant dark (&:is(.dark *));
